[gd_scene load_steps=10 format=3 uid="uid://bwrflkr6nxc02"]

[ext_resource type="Script" path="res://_scripts/LocationManager.gd" id="1_68rmo"]
[ext_resource type="Script" path="res://_scripts/TurnManager.gd" id="1_f11iq"]
[ext_resource type="Script" path="res://_scripts/playerUI.gd" id="1_ge0u1"]
[ext_resource type="Script" path="res://_scripts/Tooltip.gd" id="1_rab0l"]
[ext_resource type="PackedScene" uid="uid://bi03chxkj2ynj" path="res://scenes/prefabs/location.tscn" id="2_jpevy"]
[ext_resource type="Script" path="res://_scripts/GameManager.gd" id="4_tdf44"]
[ext_resource type="Script" path="res://_scripts/DiceManager.gd" id="6_3upe5"]
[ext_resource type="Script" path="res://_scripts/CombatManager.gd" id="7_b6gno"]
[ext_resource type="Script" path="res://_scripts/CardManager.gd" id="9_iby20"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Tooltip" type="Control" parent="."]
anchors_preset = 0
offset_left = 495.0
offset_top = 415.0
offset_right = 659.0
offset_bottom = 445.0
script = ExtResource("1_rab0l")

[node name="TooltipBg" type="ColorRect" parent="Tooltip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -16.0
offset_right = 82.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipLabel" type="Label" parent="Tooltip/TooltipBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "What does the dice do"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayersContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 52.0
offset_right = 147.0
offset_bottom = -64.0
grow_vertical = 2
theme_override_constants/h_separation = 300
theme_override_constants/v_separation = 150

[node name="LocationsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 183.0
offset_top = 53.0
offset_right = -34.0
offset_bottom = 312.0
grow_horizontal = 2
script = ExtResource("1_68rmo")

[node name="Location" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 10.0
offset_top = 38.0
offset_right = 221.0
offset_bottom = 118.0

[node name="Location2" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 245.0
offset_top = 15.0
offset_right = 456.0
offset_bottom = 95.0

[node name="Location3" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 476.0
offset_top = 15.0
offset_right = 687.0
offset_bottom = 95.0

[node name="Location4" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 713.0
offset_top = 43.0
offset_right = 924.0
offset_bottom = 123.0

[node name="Location5" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 709.0
offset_top = 164.0
offset_right = 920.0
offset_bottom = 244.0

[node name="Location6" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 476.0
offset_top = 195.0
offset_right = 687.0
offset_bottom = 275.0

[node name="Location7" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 248.0
offset_top = 193.0
offset_right = 459.0
offset_bottom = 273.0

[node name="Location8" parent="LocationsContainer" instance=ExtResource("2_jpevy")]
offset_left = 10.0
offset_top = 168.0
offset_right = 221.0
offset_bottom = 248.0

[node name="ReadyUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -74.0
offset_right = 225.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ge0u1")

[node name="Color" type="ColorRect" parent="ReadyUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.407843, 0.34902, 1, 1)

[node name="Name" type="Label" parent="ReadyUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -13.0
offset_right = 31.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Player 1's Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("1_f11iq")

[node name="EndTurnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 36.0
offset_right = 39.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "End Turn"

[node name="PassButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 89.0
offset_right = 174.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Pass"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("4_tdf44")

[node name="DiceManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -176.0
offset_right = 83.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_3upe5")

[node name="Button2" type="Button" parent="DiceManager"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -31.0
offset_right = 39.5
grow_horizontal = 2
grow_vertical = 0
text = "Roll Dice"

[node name="DiceGrid" type="GridContainer" parent="DiceManager"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 28.0
offset_top = -2.0
offset_right = -33.0
offset_bottom = 53.0
grow_horizontal = 2
columns = 2

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("7_b6gno")

[node name="CardManager" type="Node" parent="."]
script = ExtResource("9_iby20")

[connection signal="pressed" from="EndTurnButton" to="TurnManager" method="_on_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="GameManager" method="_on_button_pressed"]
[connection signal="pressed" from="DiceManager/Button2" to="DiceManager" method="_on_button_2_pressed"]
